[package]
name = "beatmap"
version = "0.1.0"
authors = ["leo60228 <iakornfeld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.1"
serde = {version = "1.0.91", features = [ "derive" ]}
serde_json = "1.0.39"
